# flyte-dev-setup

./: Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
demo_workflows/code/: workflows.py
demo_workflows/demo/: workflows.py
deployment/dask/: values.yaml
deployment/flyte/: values.yaml
docker/: Dockerfile
flyte_dev_setup/: workflows.py
tests/: conftest.py  test_dask_plugin.py
